add JWT at service1 and users table

--- a/service1/.env
+++ b/service1/.env
@@ -1,1 +1,2 @@
 DATABASE_URL="mysql://root:root@localhost:3306/bdservico1?schema=public"
+JWT_KEY="shhhhhhhhhhhdonttellanyone249ru39p48hf4dcmkn5njdowehi&^cn8fwejd@39$#3jd3!1"
